--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -5,7 +5,7 @@
 # Please visit documentation: https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = esp8266_no_mods, esp8266_display_dallas, esp8266_PIRmod, esp8266_multirelay, esp8266_staircase_mod, esp32_display_dallas, esp32_PIRmod, esp32_multirelay, esp32_staircase_mod, esp32_no_mods, esp32_dmx, esp32s2_saola, esp32c3, esp01_1m_full_shield, esp32_display_rotary, esp32_pico_kit, SP501E_2m, SP511E_2M, esp32_16mb, esp32_ethernet, esp8266_debug, esp32_debug, esp32_display_dallas_rotary_encoder_battery_stat, esp32s3dev_8MB
+default_envs = esp8266_no_mods, esp8266_display_dallas, esp8266_PIRmod, esp8266_multirelay, esp8266_staircase_mod, esp32_display_dallas, esp32_PIRmod, esp32_multirelay, esp32_staircase_mod, esp32_no_mods, esp32_dmx, esp32s2_saola, esp32c3, esp01_1m_full_shield, esp32_display_rotary, esp32_pico_board, SP501E_2m, SP511E_2M, esp32_16mb, esp32_ethernet, esp8266_debug, esp32_debug, esp32_display_dallas_rotary_encoder_battery_stat, esp32s3dev_8MB
 
 [env:esp8266_no_mods]
 board = d1_mini
@@ -271,23 +271,37 @@ build_flags = ${common.build_flags_esp32}
 lib_deps = ${esp32.lib_deps}
 board_build.partitions = ${esp32.default_partitions}
 
-[env:esp32_pico_kit]
+[env:esp32_pico_board]
 board = pico32
 platform = espressif32@3.5
+;upload_protocol = espota
+# exchange for your WLED IP
+;upload_port = "10.0.0.93"
 upload_speed = 460800
 monitor_speed = 115200
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags_esp32}
+  -D SERVERNAME='"WLED-pico32"'
+  -D WLED_DISABLE_BROWNOUT_DET
   -D WLED_WATCHDOG_TIMEOUT=0
-  -D WLED_RELEASE_NAME=esp32_pico_kit
-  -D SERVERNAME='"ESP32-WLED-pico"'
+  -D WLED_RELEASE_NAME=WLED_pico32
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   -D WLED_DISABLE_HUESYNC
   -D WLED_DISABLE_LOXONE
+  -D LEDPIN=2
+  -D RLYPIN=-1
+  -D BTNPIN=-1
   -D IRPIN=-1
+  -D USERMOD_AUDIOREACTIVE
+  -D I2S_SDPIN=25
+  -D I2S_WSPIN=15
+  -D I2S_CKPIN=14
+  ;-D MCLK_PIN=0
+;  -D WLED_DEBUG
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
+  https://github.com/blazoncek/arduinoFFT.git
 board_build.partitions = ${esp32.default_partitions}
 
 [env:esp32_16mb]
@@ -717,45 +731,4 @@ build_flags = ${common.build_flags_esp32}
 lib_deps = ${esp32.lib_deps}
   OneWire@~2.3.6
   U8g2@~2.32.10
-board_build.partitions = ${esp32.default_partitions}
-
-[env:esp32_mini_1]
-board = pico32
-platform = espressif32@4.2
-upload_speed = 460800
-monitor_speed = 115200
-;upload_protocol = espota                                                                                                                                                                                                                                           upload_protocol = espota
-# exchange for your WLED IP
-;upload_port = "10.0.0.85"
-build_unflags = ${common.build_unflags}
-build_flags = ${common.build_flags_esp32}
-  -D WLED_WATCHDOG_TIMEOUT=0
-  -D WLED_RELEASE_NAME=esp32_mini_1_N4
-  -D SERVERNAME='"ESP32-mini-1-N4"'
-  -D BTNPIN=-1
-;  -D LEDPIN=2 ; GPIO - 2, 4, 16, 17
-  ; -D RLYPIN=-1
-  ; -D IRPIN=-1
-  -D WLED_DISABLE_ALEXA
-  -D WLED_DISABLE_BLYNK
-  -D WLED_DISABLE_CRONIXIE
-  -D WLED_DISABLE_HUESYNC
-  -D WLED_DISABLE_LOXONE
-# Temperature usermod
-  ; -D USERMOD_DALLASTEMPERATURE
-  ; -D TEMPERATURE_PIN=25
-  ; -D USERMOD_DALLASTEMPERATURE_MEASUREMENT_INTERVAL=10000
-# Display usermod
-
-# Rotary encoder usermod
-  ; -D USERMOD_ROTARY_ENCODER_UI
-  ; -D ENCODER_DT_PIN=5
-  ; -D ENCODER_CLK_PIN=18
-  ; -D ENCODER_SW_PIN=19
-;  -D DEBUG=1
-;  -D WLED_DEBUG
-;  -DDEBUG_ESP_WIFI
-  -UWLED_USE_MY_CONFIG
-lib_deps = ${esp32.lib_deps}
-
 board_build.partitions = ${esp32.default_partitions}
