--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -40,7 +40,7 @@ build_flags = ${common.build_flags_esp8266}
 monitor_filters = esp8266_exception_decoder
 lib_deps = ${esp8266.lib_deps}
   OneWire@~2.3.6
-  U8g2@~2.32.10
+  olikraus/U8g2 @ ^2.34.5
 
 [env:esp8266_PIRmod]
 board = d1_mini
@@ -178,7 +178,7 @@ build_flags = ${common.build_flags_esp32}
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
   OneWire@~2.3.6
-  U8g2@~2.32.10
+  olikraus/U8g2 @ ^2.34.5
 board_build.partitions = ${esp32.default_partitions}
 
 [env:esp32_multirelay]
@@ -347,7 +347,7 @@ build_flags = ${common.build_flags_esp32}
   -D AUTOSAVE_PRESET_NUM=1
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
-  U8g2@~2.32.10
+  olikraus/U8g2 @ ^2.34.5
 board_build.partitions = ${esp32.default_partitions}
 
 ####### Debug builds ##########
@@ -406,7 +406,7 @@ build_flags = ${common.build_flags_esp32}
   -D USERMOD_BATTERY_MAX_VOLTAGE=8.4
 lib_deps = ${esp32.lib_deps}
   OneWire@~2.3.6
-  olikraus/U8g2@^2.28.8
+  olikraus/U8g2 @ ^2.34.5
 board_build.partitions = ${esp32.default_partitions}
 
 [env:esp32_ttgo_t]
@@ -530,7 +530,7 @@ build_flags = ${common.build_flags_esp32}
   -D TACHO_PIN=33
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
-  U8g2@~2.32.15 # Uncoment for display mod
+  olikraus/U8g2 @ ^2.34.5 # Uncoment for display mod
   paulstoffregen/OneWire@~2.3.6 # Uncoment for temperature mod
 board_build.partitions = ${esp32.default_partitions}
 
@@ -571,8 +571,8 @@ build_flags = ${common.build_flags_esp32}
   -D USE_ALT_DISPlAY
   ; -D FLD_PIN_SCL=22
   ; -D FLD_PIN_SDA=21
-;  -D FLD_TYPE=SH1106
-  -D FLD_TYPE=SSD1306_64
+  -D FLD_TYPE=SH1106
+;  -D FLD_TYPE=SSD1306_64
 # SPI display
   ; -DFLD_SPI_DEFAULT
   ; -D FLD_TYPE=SSD1306_SPI64
@@ -601,7 +601,7 @@ build_flags = ${common.build_flags_esp32}
 ;  -D WLED_DEBUG
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
-  U8g2@~2.34.5 # Uncoment for display mod
+  olikraus/U8g2 @ ^2.34.5 # Uncoment for display mod
   paulstoffregen/OneWire@~2.3.6 # Uncoment for temperature mod
   claws/BH1750 @ ^1.2.0 # Uncoment for light sensor mod
 board_build.partitions = ${esp32.default_partitions}
@@ -669,7 +669,7 @@ build_flags = ${common.build_flags_esp32}
 ;  -D WLED_DEBUG
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
-  U8g2@~2.32.15 # Uncoment for display mod
+  olikraus/U8g2 @ ^2.34.5 # Uncoment for display mod
   paulstoffregen/OneWire@~2.3.6 # Uncoment for temperature mod
   https://github.com/blazoncek/arduinoFFT.git
 board_build.partitions = ${esp32.default_partitions}
@@ -730,5 +730,5 @@ build_flags = ${common.build_flags_esp32}
   -UWLED_USE_MY_CONFIG
 lib_deps = ${esp32.lib_deps}
   OneWire@~2.3.6
-  U8g2@~2.32.10
+  olikraus/U8g2 @ ^2.34.5
 board_build.partitions = ${esp32.default_partitions}
